Corrigiendo el GDD v2

--- a/main.tex
+++ b/main.tex
@@ -27,8 +27,8 @@
 \input{Chapters/2. Copy me}
 
 % Creates references using the Biblatex 
-\bibliographystyle{plain}
-\bibliography{General/References.bib}
+%\bibliographystyle{plain}
+%\bibliography{General/References.bib}
 \newpage
 
 \appendix % Any section after this command will have a letter as an index
